--- a/views/order/confirmation.ejs
+++ b/views/order/confirmation.ejs
@@ -77,7 +77,7 @@
 				
 								<div class="form-check">
 									<input type="radio" class="form-check-input" name="customerType" value="new" id="customerTypeNew">
-									<label class="form-check-label" for="exampleCheck1">Create New Account</label>
+									<label class="form-check-label" for="customerTypeNew">Create New Account</label>
 								</div>
 									
 								
