--- a/views/partials/customer_side_nav.ejs
+++ b/views/partials/customer_side_nav.ejs
@@ -1,11 +1,15 @@
-<div class="card" >
-    <div class="card-header">
-        Customer Dashboard
-    </div>
-    <div class="card-body">
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="/customer/orders">My Orders</a></li>
-            <li class="list-group-item"><a href="/login/expired">Logout</a></a></li>
-        </ul>
+<section class="tm-section">
+<div class="container h-100" >
+    <div class="card" >
+        <div class="card-header" style="background: #2693f1; color: #fff">
+            Customer Dashboard
+        </div>
+        <div class="card-body">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item"><a href="/customer/orders">My Orders</a></li>
+                <li class="list-group-item"><a href="/login/expired">Logout</a></a></li>
+            </ul>
+        </div>
     </div>
 </div>
+</section>
