--- a/views/customer/orders.ejs
+++ b/views/customer/orders.ejs
@@ -9,7 +9,7 @@
                   <div class="ar-box-head"><h1 class="ar-title">Active Orders</h1></div>
                   <div class="ar-cinfo">
                     <div class="ar-cname ar-info-line">Customer Name: <span class="ar-value"><%= customer.name %></span></div>
-                    <div class="ar-cno ar-info-line">Customer Number: <span class="ar-value">cu-<%= customer.id %></span></div>
+                    <div class="ar-cno ar-info-line">Customer Email: <span class="ar-value"><%= customer.email %></span></div>
                   </div>
                 </div>
                 <div class="ard-wrap stp-row">
