--- a/views/trademark-order/checkout-order.ejs
+++ b/views/trademark-order/checkout-order.ejs
@@ -80,6 +80,7 @@
 
                           <input type="hidden" name="code" value="<%= code %>" required="required">
                           <input type="hidden" name="price" value="<%= secretAmountDecode %>" required="required">
+                          <input type="hidden" name="customerId" value="<%= secretCustomer %>" required="required">
                           
                       
                           <div class="form-group">
