--- a/views/customer/orders.ejs
+++ b/views/customer/orders.ejs
@@ -24,8 +24,9 @@
                     <div class="tab-pane fade show active" id="nav-pending" role="tabpanel" aria-labelledby="nav-pending-tab">
                       <div class="ard-content">
 
-                        <% data.trademark.forEach(function(mark,key) { %>
+                        <% trademarks.forEach(function(mark,key) { %>
                           
+                          <% if( mark.pen > 0 ) { %>
                           <div class="ard-row table-ard-wrap table-responsive">
                             <table class="table table-striped table-bordered caption-top table-hover">
                                 <caption class="ard-row-head"><h2 class="ard-row-title"><span class="flag-icon flag-icon-us"><em class="sr-only"><%= mark.countryName %></em></span><%= mark.countryName %></h2></caption>
@@ -41,14 +42,14 @@
                                 </thead>
                                 <tbody>
                                   <% mark.data.forEach(function(trademark,key) { %>
-
-                                    <% if( trademark.markMongo && trademark.markMongo.status != "Registered" ) { %>
+                                    
+                                    <% if( trademark.status != "Registered" ) { %>
                                     <tr>
-                                      <td><%= moment(trademark.markMongo.filingDate).format('MMM D, YYYY') %></td>
-                                      <td><%= trademark.markMongo.serialNumber %></td>
-                                      <td><%= trademark.markMongo.registrationNumber %></td>
-                                      <td><a href="/customer/orders/<%= trademark.markMongo._id %>"><%= trademark.markMongo.mark %></a></td>
-                                      <td><%= trademark.markMongo.status %></td>
+                                      <td><%= moment(trademark.filingDate).format('MMM D, YYYY') %></td>
+                                      <td><%= trademark.serialNumber %></td>
+                                      <td><%= trademark.registrationNumber %></td>
+                                      <td><a href="/customer/orders/<%= trademark._id %>"><%= trademark.mark %></a></td>
+                                      <td><%= trademark.status %></td>
                                       <td><a href="#" class="text-danger"></a></td>
                                     </tr>
                                     <% } %>
@@ -56,6 +57,7 @@
                                 </tbody>
                               </table>
                           </div>
+                          <% } %>
                         <% }) %>
 
 
@@ -63,8 +65,8 @@
                     </div>
                     <div class="tab-pane fade" id="nav-registered" role="tabpanel" aria-labelledby="nav-registered-tab">
                       <div class="ard-content">
-                        <% data.trademark.forEach(function(mark,key) { %>
-                          
+                        <% trademarks.forEach(function(mark,key) { %>
+                          <% if( mark.reg > 0 ) { %>
                           <div class="ard-row table-ard-wrap table-responsive">
                             <table class="table table-striped table-bordered caption-top table-hover">
                                 <caption class="ard-row-head"><h2 class="ard-row-title"><span class="flag-icon flag-icon-us"><em class="sr-only"><%= mark.countryName %></em></span><%= mark.countryName %></h2></caption>
@@ -80,13 +82,13 @@
                                 </thead>
                                 <tbody>
                                   <% mark.data.forEach(function(trademark,key) { %>
-                                    <% if( trademark.markMongo && trademark.markMongo.status == "Registered" ) { %>
+                                    <% if( trademark.status == "Registered" ) { %>
                                       <tr>
-                                        <td><%= moment(trademark.markMongo.filingDate).format('MMM D, YYYY') %></td>
-                                        <td><%= trademark.markMongo.serialNumber %></td>
-                                        <td><%= trademark.markMongo.registrationNumber %></td>
-                                        <td><a href="/customer/orders/<%= trademark.markMongo._id %>"><%= trademark.markMongo.mark %></a></td>
-                                        <td><%= trademark.markMongo.status %></td>
+                                        <td><%= moment(trademark.filingDate).format('MMM D, YYYY') %></td>
+                                        <td><%= trademark.serialNumber %></td>
+                                        <td><%= trademark.registrationNumber %></td>
+                                        <td><a href="/customer/orders/<%= trademark._id %>"><%= trademark.mark %></a></td>
+                                        <td><%= trademark.status %></td>
                                         <td><a href="#" class="text-danger"></a></td>
                                       </tr>
                                       <% } %>
@@ -94,12 +96,13 @@
                                 </tbody>
                               </table>
                           </div>
+                          <% } %>
                         <% }) %>
                       </div>
                     </div>
                     <div class="tab-pane fade" id="nav-all" role="tabpanel" aria-labelledby="nav-all-tab">
                       <div class="ard-content">
-                        <% data.trademark.forEach(function(mark,key) { %>
+                        <% trademarks.forEach(function(mark,key) { %>
                           
                           <div class="ard-row table-ard-wrap table-responsive">
                             <table class="table table-striped table-bordered caption-top table-hover">
@@ -116,15 +119,15 @@
                                 </thead>
                                 <tbody>
                                   <% mark.data.forEach(function(trademark,key) { %>
-                                    <% if( trademark.markMongo ) { %>
-                                    <tr>
-                                      <td><%= moment(trademark.markMongo.filingDate).format('MMM D, YYYY') %></td>
-                                      <td><%= trademark.markMongo.serialNumber %></td>
-                                      <td><%= trademark.markMongo.registrationNumber %></td>
-                                      <td><a href="/customer/orders/<%= trademark.markMongo._id %>"><%= trademark.markMongo.mark %></a></td>
-                                      <td><%= trademark.markMongo.status %></td>
-                                      <td><a href="#" class="text-danger"></a></td>
-                                    </tr>
+                                    <% if( trademark ) { %>
+                                      <tr>
+                                        <td><%= moment(trademark.filingDate).format('MMM D, YYYY') %></td>
+                                        <td><%= trademark.serialNumber %></td>
+                                        <td><%= trademark.registrationNumber %></td>
+                                        <td><a href="/customer/orders/<%= trademark._id %>"><%= trademark.mark %></a></td>
+                                        <td><%= trademark.status %></td>
+                                        <td><a href="#" class="text-danger"></a></td>
+                                      </tr>
                                     <% } %>
                                   <% }) %>
                                 </tbody>
