--- a/views/partials/nav-common.ejs
+++ b/views/partials/nav-common.ejs
@@ -144,6 +144,11 @@
         </div>
     </li>
     <% } else { %>
-        
+        <li class="">
+            <a class="nav-link" href="/cart"><i class="fas fa-shopping-cart"></i> <span id="shopping-cart"></span></a>
+        </li>
+        <a class="dropdown-item" href="/login">
+            Login
+        </a>
     <% } %>
 </ul>
