--- a/views/partials/nav-common.ejs
+++ b/views/partials/nav-common.ejs
@@ -147,8 +147,11 @@
         <li class="">
             <a class="nav-link" href="/cart"><i class="fas fa-shopping-cart"></i> <span id="shopping-cart"></span></a>
         </li>
-        <a class="dropdown-item" href="/login">
-            Login
-        </a>
+        <li class="">
+            <a class="dropdown-item" href="/login">
+                Login
+            </a>
+        </li>
+        
     <% } %>
 </ul>
