--- a/views/public/login.ejs
+++ b/views/public/login.ejs
@@ -32,9 +32,9 @@
 									Login
 								</button>
 
-								<a class="btn btn-link" style="color:#000;font-weight:600;" href="#">
+								<!-- <a class="btn btn-link" style="color:#000;font-weight:600;" href="#">
 									Forgot Your Password?
-								</a>
+								</a> -->
 							</div>
 						</div>
 					</form>
@@ -42,7 +42,7 @@
 				</div>
 			</div>
 			<br>
-			<div class="form-box" style="text-align: center; height: 60px;">
+			<div class="form-box" style="text-align: center; height: 60px; display:none">
 				<div class="">
 					<h5 style="margin:0;color:#000;">New to Trademarkers? <a href="/register">Create an account</a></h5>
 				</div>
