--- a/views/public/login.ejs
+++ b/views/public/login.ejs
@@ -18,7 +18,7 @@
 					<form id="login-from" class="custom-frm" method="POST" action="/login">
 						<div class="form-group row">
 							<!-- <label for="email">E-Mail Address</label> -->
-							<input id="username" type="text" class="form-control" name="email" placeholder="E-Mail Address" value="" required autofocus>
+							<input id="username" type="text" class="form-control" name="username" placeholder="E-Mail Address" value="" required autofocus>
 						</div>
 						
 						<div class="form-group row">
