--- a/views/customer/index.ejs
+++ b/views/customer/index.ejs
@@ -8,6 +8,7 @@
                 <div class="ar-cinfo">
                   <div class="ar-cname ar-info-line">Customer Name: <span class="ar-value"><%= user.name %></span></div>
                   <div class="ar-cno ar-info-line">Customer Email: <span class="ar-value"><%= user.email %></span></div>
+                  <div class="ar-cno ar-info-line">Customer No: <span class="ar-value"><%= user.custNo %></span></div>
                 </div>
               </div>
               
