--- a/views/customer/orders.ejs
+++ b/views/customer/orders.ejs
@@ -10,6 +10,7 @@
                   <div class="ar-cinfo">
                     <div class="ar-cname ar-info-line">Customer Name: <span class="ar-value"><%= customer.name %></span></div>
                     <div class="ar-cno ar-info-line">Customer Email: <span class="ar-value"><%= customer.email %></span></div>
+                    <div class="ar-cno ar-info-line">Customer No: <span class="ar-value"><%= customer.custNo %></span></div>
                   </div>
                 </div>
                 <div class="ard-wrap stp-row">
