--- a/views/layouts/customer-layout-interactive.ejs
+++ b/views/layouts/customer-layout-interactive.ejs
@@ -48,7 +48,7 @@
       </div>
     </header>
 
-    <div class="container h-100">
+    <div class="container">
       <div class="row">
        
         <div class="col-md-3 ">
