--- a/views/partials/customer_side_nav.ejs
+++ b/views/partials/customer_side_nav.ejs
@@ -7,6 +7,7 @@
         <div class="card-body">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><a href="/customer/orders">My Orders</a></li>
+                <li class="list-group-item"><a href="/customer/profile">My Profile</a></li>
                 <li class="list-group-item"><a href="/login/expired">Logout</a></a></li>
             </ul>
         </div>
