--- a/views/order/registration.ejs
+++ b/views/order/registration.ejs
@@ -26,11 +26,12 @@
 						<div class="form-box">
 							<label class="form-box-container" for="type">
 								<b> Please select the type of trademark you wish to request:</b>
-								<i class="fa fa-info-circle" data-toggle="tooltip" data-placement="top" data-html="true" title="TYPES OF TRADEMARKS<hr><p>Word Mark: one trademark, which contains only verbal elements (words, letters, numbers or any character).
-								</p>
-								<p>Logo (design only): one trademark, which contains only design elements (images, graphics, colors).</p>
-								<p>Combined Mark: one trademark, which contains verbal elements as well as design elements (including stylized text).</p>
-								"></i>
+								<i class="fa fa-info-circle" data-toggle="tooltip" data-placement="top" data-html="true" title="TYPES OF TRADEMARKS
+Word Mark: one trademark, which contains only verbal elements (words, letters, numbers or any character).
+
+Logo (design only): one trademark, which contains only design elements (images, graphics, colors).
+
+Combined Mark: one trademark, which contains verbal elements as well as design elements (including stylized text)."></i>
 							</label>
 
 							<div class="form-check">
@@ -114,14 +115,15 @@
 								<!-- <a href="/classes" target="_blank" class="btn btn-sm btn-danger" style="color: white;"> 
 									Search Classes
 								</a> -->
-								<i class="fa fa-info-circle" data-toggle="tooltip" data-placement="right" data-html="true" title="What are classes?<hr><p>When registering a trademark you need to specify the products and services that will be associated with your trademark.
+								<i class="fa fa-info-circle" data-toggle="tooltip" data-placement="right" data-html="true" title="What are classes?
+								
+When registering a trademark you need to specify the products and services that will be associated with your trademark.
 
-								The large majority of countries of the world have adopted the International Classification of Nice. This system groups all products and services into 45 classes - 34 for products, 11 for services - permitting you to specify precise and clear classes covering your trademark.
+The large majority of countries of the world have adopted the International Classification of Nice. This system groups all products and services into 45 classes - 34 for products, 11 for services - permitting you to specify precise and clear classes covering your trademark.
 
-								The protection that is offered to a registered trademark covers only the classes specified at the time of registration, therefore, allowing two identical trademarks to coexist in distinct classes.
+The protection that is offered to a registered trademark covers only the classes specified at the time of registration, therefore, allowing two identical trademarks to coexist in distinct classes.
 
-								We provide a helpful Class Search tool, which allows you to easily determine the classes your products or services are related to; you will find the button that redirects to this application in this page..</p>
-								"></i>
+We provide a helpful Class Search tool, which allows you to easily determine the classes your products or services are related to; you will find the button that redirects to this application in this page..."></i>
 							</span>
 						</b>
 						</label>
