--- a/views/order/registrationLanding.ejs
+++ b/views/order/registrationLanding.ejs
@@ -183,7 +183,7 @@
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">Study Step 1</h5>
+				<h5 class="modal-title" id="exampleModalLabel">Trademark Study</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 				<span aria-hidden="true">&times;</span>
 				</button>
@@ -207,7 +207,7 @@
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">Registration Step 1</h5>
+				<h5 class="modal-title" id="exampleModalLabel">Trademark Registration</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 				<span aria-hidden="true">&times;</span>
 				</button>
