--- a/views/order/cart.ejs
+++ b/views/order/cart.ejs
@@ -17,7 +17,7 @@
 				</tr>
 				<% for(let i=0; i < cartItems.length; i++) { %>
 					<tr>
-						<th><%= cartItems[i].country.abbr %></th>
+						<th><%= cartItems[i].country.name %></th>
 						<th><%= cartItems[i].serviceType %></th>
 						<th><%= cartItems[i].type %></th>
 						<th><%= cartItems[i].word_mark %></th>
