--- a/views/partials/interactiveScript.ejs
+++ b/views/partials/interactiveScript.ejs
@@ -1,5 +1,5 @@
 <script src="/interactive/js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-  <script src="/interactive/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+<script src="/interactive/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
 
   <script>
   $( document ).ready(function() {
@@ -83,6 +83,17 @@
               return true;
             }
         });
+
+    // $("#payment-form").submit(function(){
+    //   alert('asd')
+    //   const emailRegexp = /[a-zA-Z0-9._-]{3,}@[a-zA-Z0-9.-]{3,}\.[a-zA-Z]{2,4}/;
+
+    //   if ( $("#email").length && !emailRegexp.test($("#email").val())) {
+    //     alert('Please Enter email address')
+    //     $("#email").focus()
+    //     return false;
+    //   }
+    // })
 
   });
 </script>
