--- a/views/order/validateProfile.ejs
+++ b/views/order/validateProfile.ejs
@@ -12,7 +12,14 @@
 						<input class="" type="hidden" name="countryId" value="<%= data.countryId %>">
 						<input class="" type="hidden" name="serviceType" value="<%= data.serviceType %>">
 						<input class="" type="hidden" name="type" value="<%= data.type %>">
-						<input class="" type="hidden" name="word_mark" value="<%= data.word_mark %>">
+                        <input class="" type="hidden" name="word_mark" value="<%= data.word_mark %>">
+                        
+						<input class="" type="hidden" name="commerce" value="<%= data.commerce %>">
+						<input class="" type="hidden" name="filed" value="<%= data.filed %>">
+						<input class="" type="hidden" name="priority" value="<%= data.priority %>">
+						<input class="" type="hidden" name="origin" value="<%= data.origin %>">
+						<input class="" type="hidden" name="originDate" value="<%= data.originDate %>">
+						<input class="" type="hidden" name="originTm" value="<%= data.originTm %>">
 						
 						<% for (let i=0; i < data.class.length; i++) { %>
 							<input class="" type="hidden" name="class" value="<%= data.class[i] %>">
