--- a/views/order/confirmation.ejs
+++ b/views/order/confirmation.ejs
@@ -48,6 +48,13 @@
 						<input class="" type="hidden" name="state" value="<%= data.state %>">
 						<input class="" type="hidden" name="zipCode" value="<%= data.zipCode %>">
 
+						<input class="" type="hidden" name="commerce" value="<%= data.commerce %>">
+						<input class="" type="hidden" name="filed" value="<%= data.filed %>">
+						<input class="" type="hidden" name="priority" value="<%= data.priority %>">
+						<input class="" type="hidden" name="origin" value="<%= data.origin %>">
+						<input class="" type="hidden" name="originDate" value="<%= data.originDate %>">
+						<input class="" type="hidden" name="originTm" value="<%= data.originTm %>">
+
 						<% 
 							
 							for (let i=0; i < data.class.length; i++) {
@@ -85,6 +92,13 @@
 						<input class="" type="hidden" name="city" value="<%= data.city %>">
 						<input class="" type="hidden" name="state" value="<%= data.state %>">
 						<input class="" type="hidden" name="zipCode" value="<%= data.zipCode %>">
+
+						<input class="" type="hidden" name="commerce" value="<%= data.commerce %>">
+						<input class="" type="hidden" name="filed" value="<%= data.filed %>">
+						<input class="" type="hidden" name="priority" value="<%= data.priority %>">
+						<input class="" type="hidden" name="origin" value="<%= data.origin %>">
+						<input class="" type="hidden" name="originDate" value="<%= data.originDate %>">
+						<input class="" type="hidden" name="originTm" value="<%= data.originTm %>">
 						
 						<% for (let i=0; i < data.class.length; i++) { %>
 							<input class="" type="hidden" name="class" value="<%= data.class[i] %>">
